# claude-migration-tool

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Claude-Migrate.bat  LICENSE  README.md  SECURITY.md  Sign-Build.ps1  analyser.py  config.py  main.py  path_rewriter.py  preflight.py  pyproject.toml  report_generator.py  scaffold_generator.py  security.py
.github/workflows/: ci.yml
tests/: conftest.py  test_path_rewriter.py  test_pipeline.py  test_security.py
